--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HI</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    test
-    THIS IS UPDATED !
+    <p>HAPPY BIRTHDAY <br>
+    pog <br>
+    pog <br>
+    pog <br>
+    pog <br>
+    pog <br>
+    pog <br>
+    pog <br>
+    </p>
 </body>
 </html>
