--- a/index.html
+++ b/index.html
@@ -22,58 +22,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p id="daycounter"> *•.¸♡ DAY 1/365 ♡¸.•*<br></p>
+    <p id="daycounter"> *•.¸♡ DAY 2/365 ♡¸.•*<br></p>
     <div id="miraitext">
         <p>
-            HELLO RORO <br>
-            HAPPY BIIIIRTHDAAY TOO YOOO DADADA ✨🎆✨🎆<br>
-            so u may be asking urself wtf is this where am i who is that talking there<br>
-            the name is MirAI !<br>
-            i am this website !<br>
-            i was made by a really handsome boi called Sharkyy<br>
-            that is really cool and did i mention awsome aswell<br>
-            (he was pointing a gun at me there help)<br>
-            uhm as u may notice up there ⬆️ there is a days counter<br>
-            see the thing is I AM UR BIRTHDAY PRESENT<br>
-            aaaa im so exited ur gonna love me i will make sure u do<br>
-            (not forcefully or by using a weapon dw)<br>
-            anyways from today till your next birthday, i'll be here !<br>
-            i'll have something new to you everyday and u will see it every morning<br>
-            (unless my creator went really stupid and forgot to update me)<br>
-            so maybe one day ull wake up to a single sentence,<br>
-            maybe ull wake up to a good song,<br>
-            maybe u'll wake up to an amongus joke !<br>
-            (he injected me with a lot of these send help)<br>
-            everyday ill have something new for u, i am ur lil buddy ! MirAI !<br>
-            <br>
-            <br>
-            <br>
-            this is my card down there (very well done) ! pls right click and open the image in a new tab to see the details ! thank u
+            HELLO RORO ! HOPE UR DOING WELL !!
+            today is the 12th of june, it looks like the weather is nice, but expect it to be kinda hot !
+            yk what else is hot ? what i have for u today ! <br>
+            i mean not really hot that's kinda innapropriate im sorry
         </p>
-    
-    <div id="card"><img src="card.png" width="50%" height="50%"></div>
-    <br>
-    <br>
-    <p>ANYWAYS FOR TODAY i have for u a letter ! from dad !</p>
-    <br>
-    </div>
-    <div id="myletter">
+        <br>
         <p>
-        hello there lol
-        das me ur fav fish !
-        happy birthday n thank u, for just being here, for just existing
-        i hope u like my boy here ngl he de be lookin kinda fancy
-        maybe now he is kinda rushed but that's the fun part, ull see him grow at times goes !
-        love u and you are the best thing that happened to me rn
-        i know it might not be obvious and i may not treat u as well as i really want but i promise this will change 
-        cuz the thing is u know im a shy puffy (s) but from now on frick it i am really more comfortable talking to u more than talking to my parents even lol
-        so yeah look forward for really nice things from now on, and ill try to make ur next year better than the previous every time !
-        cuz that's what u deserve, you are the nicest, best, most beautiful, person in my life
-        u desereve all the happiness in the world and even more, you are amazing and capable of doing things that are just out of ur sight
-        but see that's the thing ! u just need a lil bit more of courage n trusting urself, and ull be able to take off the world
-        stay the best, lot of hugs,i love u ! <3
+            anyways for today if found a cool website called find the invisible cow !
+            where u gotta find an invisible cow by using sound ! Hope u enjoyyy
         </p>
     </div>
+    <div id="link">
+        <a href="https://findtheinvisiblecow.com/" target="_blank"> click me</a>
+    </div>
+    <br>
     
 </body>
 </html>
