--- a/index.html
+++ b/index.html
@@ -22,22 +22,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p id="daycounter"> *•.¸♡ DAY 2/365 ♡¸.•*<br></p>
+    <p id="daycounter"> *•.¸♡ DAY 3/365 ♡¸.•*<br></p>
     <div id="miraitext">
         <p>
-            HELLO RORO ! HOPE UR DOING WELL !!
-            today is the 12th of june, it looks like the weather is nice, but expect it to be kinda hot !
-            yk what else is hot ? what i have for u today ! <br>
-            i mean not really hot that's kinda innapropriate im sorry
-        </p>
-        <br>
-        <p>
-            anyways for today if found a cool website called find the invisible cow !
-            where u gotta find an invisible cow by using sound ! Hope u enjoyyy
+            HELLO RORO ! GOOD MORNING !! <br>
+            this is day 3 i hope it is going well for you and wish u all the best ~! <br>
+            for today i have a song playlist for you, to empty ur head and feel funny while ur doing ur everyday dailies lol <br>
+            i hope u enjoy ! ill see u again tomorrow <3
         </p>
     </div>
     <div id="link">
-        <a href="https://findtheinvisiblecow.com/" target="_blank"> click me</a>
+        <a href="https://www.youtube.com/watch?v=g9gHC2quF3A&t=550s&ab_channel=brgr" target="_blank"> click me</a>
     </div>
     <br>
     
