--- a/index.html
+++ b/index.html
@@ -22,17 +22,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p id="daycounter"> *•.¸♡ DAY 3/365 ♡¸.•*<br></p>
+    <p id="daycounter"> *•.¸♡ DAY 4/365 ♡¸.•*<br></p>
     <div id="miraitext">
         <p>
-            HELLO RORO ! GOOD MORNING !! <br>
-            this is day 3 i hope it is going well for you and wish u all the best ~! <br>
-            for today i have a song playlist for you, to empty ur head and feel funny while ur doing ur everyday dailies lol <br>
-            i hope u enjoy ! ill see u again tomorrow <3
+            HIIIII <br>
+            hope u'll have a great day today, and hope u'll like what i have for you today ! <br>
+            ill see u again tomorrow <3
         </p>
     </div>
     <div id="link">
-        <a href="https://www.youtube.com/watch?v=g9gHC2quF3A&t=550s&ab_channel=brgr" target="_blank"> click me</a>
+        <a href="https://www.youtube.com/watch?v=ZY6gc1JNKfs&ab_channel=vibinqx%21" target="_blank"> click me</a>
     </div>
     <br>
     
